--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
   <!-- 如果是用mvn命令生成的xml，需要修改servlet版本为3.1 -->
   <!-- 配置DispatcherServlet -->
   <servlet>
-    <servlet-name>seckill-dispatcher</servlet-name>
+    <servlet-name>ssm</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <!-- 配置springMVC需要加载的配置文件
         spring-dao.xml,spring-service.xml,spring-web.xml
@@ -16,13 +16,18 @@
       <param-name>contextConfigLocation</param-name>
       <param-value>classpath:spring/spring-*.xml</param-value>
     </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>seckill-dispatcher</servlet-name>
+    <servlet-name>ssm</servlet-name>
     <!-- 默认匹配所有的请求 -->
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
 
   <!--该配置可以访问监控界面，配置好后，可以通过http://ip:port/项目名/druid/index.html监控数据库访问性能-->
   <filter>
